--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="navbar">
     <div class="navbar-left">
-      <img src="logo.png" alt="Streamlyst" class="logo" />
+      <img src="ChatGPT Image Jun 14, 2025, 06_51_45 AM.png" alt="Streamlyst" class="logo" />
       <div class="nav-links">
         <a href="#" class="nav-link active" data-section="home"><i class="fas fa-home"></i> Home</a>
         <a href="#" class="nav-link" data-section="movies"><i class="fas fa-film"></i> Movies</a>
