--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="navbar">
     <div class="navbar-left">
-      <img src="ChatGPT Image Jun 14, 2025, 06_51_45 AM.png" alt="Streamlyst" class="logo" />
+      <img src="images/logo.png" alt="Streamlyst" class="logo" />
       <div class="nav-links">
         <a href="#" class="nav-link active" data-section="home"><i class="fas fa-home"></i> Home</a>
         <a href="#" class="nav-link" data-section="movies"><i class="fas fa-film"></i> Movies</a>
@@ -93,7 +93,7 @@
         <h3>Episodes</h3>
         <div class="episodes-list" id="episodes-list"></div>
       </div>
-      <div class="modal-video-container">
+      <div class="modal-video-container" id="modal-video-container">
         <iframe id="modal-video" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
@@ -117,7 +117,7 @@
 
   <footer class="footer">
     <div class="footer-content">
-      <img src="logo.png" alt="Streamlyst" class="footer-logo" />
+      <img src="images/logo.png" alt="Streamlyst" class="footer-logo" />
       <div class="footer-links">
         <div class="footer-column">
           <h3>Navigation</h3>
