--- a/index.html
+++ b/index.html
@@ -1,84 +1,88 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>My Website</title>
-  <link rel="stylesheet" href="css/home.css">
-  <link rel="preload" href="css/home.css" as="style">
-  <link rel="preload" href="js/home.js" as="script">
-  <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <script defer src="js/home.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Movie & TV Streaming</title>
+    <link rel="stylesheet" href="css/home.css">
 </head>
-
 <body>
-  <div class="navbar">
-    <img src="logo.png" alt="LOGO HERE" />
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <input type="text" class="search-bar" placeholder="Search..." onfocus="openSearchModal()" />
+    <!-- Header -->
+    <header>
+        <div class="navbar">
+            <h1>StreamHub</h1>
+            <div class="nav-buttons">
+                <button onclick="openSearchModal()" class="search-btn">🔍 Search</button>
+            </div>
+        </div>
+    </header>
+
+    <!-- Banner Section -->
+    <section id="banner" class="banner">
+        <div class="banner-content">
+            <h2 id="banner-title">Loading...</h2>
+        </div>
+    </section>
+
+    <!-- Content Sections -->
+    <main class="content">
+        <section class="media-section">
+            <h3>Trending Movies</h3>
+            <div id="movies-list" class="media-list"></div>
+        </section>
+
+        <section class="media-section">
+            <h3>Trending TV Shows</h3>
+            <div id="tvshows-list" class="media-list"></div>
+        </section>
+
+        <section class="media-section">
+            <h3>Trending Anime</h3>
+            <div id="anime-list" class="media-list"></div>
+        </section>
+    </main>
+
+    <!-- Video Modal -->
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="modal-title">Title</h2>
+                <button onclick="closeModal()" class="close-btn">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-info">
+                    <img id="modal-image" src="" alt="Poster">
+                    <div class="modal-details">
+                        <div id="modal-rating" class="rating"></div>
+                        <p id="modal-description">Description</p>
+                    </div>
+                </div>
+                <div class="modal-video-container">
+                    <iframe id="modal-video" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
-  <div class="banner" id="banner">
-    <h1 id="banner-title"></h1>
-  </div>
-
-  <div class="row">
-    <h2>Trending Movies</h2>
-    <div class="list" id="movies-list"></div>
-  </div>
-
-  <div class="row">
-    <h2>Trending TV Shows</h2>
-    <div class="list" id="tvshows-list"></div>
-  </div>
-
-  <div class="row">
-    <h2>Trending Anime</h2>
-    <div class="list" id="anime-list"></div>
-  </div>
-
-  <div class="modal" id="modal">
-    <div class="modal-content">
-      <span class="close" onclick="closeModal()" style="color: red;">&times;</span>
-      <div class="modal-body">
-  <img id="modal-image" src="" alt="" />
-  <div class="modal-text">
-    <h2 id="modal-title"></h2>
-    <div class="stars" id="modal-rating"></div>
-    <p id="modal-description"></p>
-  </div>
-</div>
-      
-      <div class="server-selector">
-        <label for="server">Change Server:</label>
-        <select id="server" onchange="changeServer()">
-          <option value="vidsrc.cc">Vidsrc.cc</option>
-          <option value="vidsrc.me">Vidsrc.me</option>
-          <option value="player.videasy.net">Player.Videasy.net</option>
-        </select>
-      </div>
-      <iframe id="modal-video" width="100%" height="315" frameborder="0" allowfullscreen></iframe>
+    <!-- Search Modal -->
+    <div id="search-modal" class="modal">
+        <div class="modal-content search-modal-content">
+            <div class="modal-header">
+                <h2>Search Movies & TV Shows</h2>
+                <button onclick="closeSearchModal()" class="close-btn">&times;</button>
+            </div>
+            <div class="search-container">
+                <input 
+                    type="text" 
+                    id="search-input" 
+                    placeholder="Search for movies, TV shows, anime..." 
+                    oninput="searchTMDB()"
+                >
+            </div>
+            <div id="search-results" class="media-list"></div>
+        </div>
     </div>
-  </div>
 
-  <div class="search-modal" id="search-modal">
-    <span class="close" onclick="closeSearchModal()" style="color: red;">&times;</span>
-    <input type="text" id="search-input" placeholder="Search for a movie or show..." oninput="searchTMDB()" />
-    <div class="results" id="search-results"></div>
-  </div>
-
-<footer class="footer">
-  <div class="footer-content">
-    <p>&copy; 2025 My Website. All rights reserved.</p>
-    <div class="footer-links">
-      <a href="#">Disclaimer</a>
-      <a href="#">About Us</a>
-      <a href="#">Contact Us</a>
-    </div>
-  </div>
-</footer>
-
-  
+    <script src="js/home.js"></script>
 </body>
+</html>
