--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header -->
     <header>
         <div class="navbar">
-            <h1>StreamHub</h1>
+            <h1>Streamlyst</h1>
             <div class="nav-buttons">
                 <button onclick="openSearchModal()" class="search-btn">🔍 Search</button>
             </div>
