--- a/index.html
+++ b/index.html
@@ -139,5 +139,10 @@
     </div>
 
     <script src="js/home.js"></script>
+
+    <footer style="text-align: center; font-size: 0.9em; padding: 20px;">
+  <p>Disclaimer: streamlyst does not host or upload any video content. All videos are embedded from third-party sources.</p>
+    </footer>
+    
 </body>
 </html>
