--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <link rel="stylesheet" href="css/home.css">
 
   <style>
-    /* ===== AD STYLES ===== */
+    /* ==== ADS LAYOUT ==== */
     .ad-top, .ad-bottom {
       position: fixed;
       left: 0;
       width: 100%;
       text-align: center;
-      z-index: 9999;
-      height: 90px;
+      z-index: 999;
+      height: 70px;
+      overflow: hidden;
     }
 
     .ad-top { top: 0; }
@@ -25,80 +26,79 @@
       position: fixed;
       top: 50%;
       transform: translateY(-50%);
-      width: 160px;
-      z-index: 9999;
+      width: 120px;
+      z-index: 999;
+      overflow: hidden;
     }
 
     .ad-left { left: 0; }
     .ad-right { right: 0; }
 
-    .content {
-      margin-top: 100px;
-      margin-bottom: 100px;
-      padding-left: 170px;
-      padding-right: 170px;
+    header {
+      margin-top: 75px;
+      z-index: 1000;
+      position: relative;
     }
 
-    /* Tablets */
+    .content {
+      margin-bottom: 80px;
+      padding-left: 140px;
+      padding-right: 140px;
+    }
+
+    /* Responsive adjustments */
     @media (max-width: 1024px) {
       .ad-left, .ad-right {
-        width: 120px;
+        width: 100px;
       }
+
       .content {
-        padding-left: 130px;
-        padding-right: 130px;
+        padding-left: 110px;
+        padding-right: 110px;
       }
     }
 
-    /* Phones */
     @media (max-width: 768px) {
       .ad-left, .ad-right {
-        display: none !important;
+        display: none;
       }
 
       .ad-top, .ad-bottom {
         height: 50px;
       }
 
+      header {
+        margin-top: 55px;
+      }
+
       .content {
-        margin-top: 60px;
         margin-bottom: 60px;
         padding: 10px;
       }
     }
 
-    /* Very small screens */
     @media (max-width: 480px) {
       .ad-top, .ad-bottom {
         height: 40px;
       }
 
+      header {
+        margin-top: 45px;
+      }
+
       .content {
-        margin-top: 50px;
         margin-bottom: 50px;
       }
     }
 
-    /* Very large screens */
-    @media (min-width: 1920px) {
-      .ad-left, .ad-right {
-        width: 200px;
-      }
-
-      .content {
-        padding-left: 220px;
-        padding-right: 220px;
-      }
-    }
-
     .modal {
-      z-index: 10000; /* Ensure modals appear over ads */
+      z-index: 1001; /* Over ads */
     }
   </style>
 </head>
 <body>
 
-  <!-- === Ads === -->
+  <!-- === AD ZONES === -->
   <div class="ad-top">
     <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script>
     <ins class="eas6a97888e2" data-zoneid="5644240"></ins>
@@ -123,7 +123,7 @@
     <script>(AdProvider = window.AdProvider || []).push({ serve: {} });</script>
   </div>
 
-  <!-- Header -->
+  <!-- === HEADER === -->
   <header>
     <div class="navbar">
       <h1>Streamlyst</h1>
@@ -133,14 +133,14 @@
     </div>
   </header>
 
-  <!-- Banner Section -->
+  <!-- === BANNER === -->
   <section id="banner" class="banner">
     <div class="banner-content">
       <h2 id="banner-title">Loading...</h2>
     </div>
   </section>
 
-  <!-- Content -->
+  <!-- === MAIN CONTENT === -->
   <main class="content">
     <section class="media-section">
       <h3>Trending Movies</h3>
@@ -158,7 +158,7 @@
     </section>
   </main>
 
-  <!-- Video Modal -->
+  <!-- === VIDEO MODAL === -->
   <div id="modal" class="modal">
     <div class="modal-content">
       <div class="modal-header">
@@ -180,7 +180,7 @@
     </div>
   </div>
 
-  <!-- Search Modal -->
+  <!-- === SEARCH MODAL === -->
   <div id="search-modal" class="modal">
     <div class="modal-content search-modal-content">
       <div class="modal-header">
@@ -199,7 +199,7 @@
     </div>
   </div>
 
-  <!-- Disclaimer -->
+  <!-- === FOOTER === -->
   <footer style="text-align: center; font-size: 0.9em; padding: 20px;">
     <p>Disclaimer: Streamlyst does not host or upload any video content. All videos are embedded from third-party sources.</p>
   </footer>
